--- a/index.html
+++ b/index.html
@@ -24,42 +24,42 @@
     <header class="header">
       <section class="section">
         <div class="container">
-          <div class="navigation-header">
-            <nav class="navigation">
-              <a class="logo link" href="index.html">Web<span class="logo-color">Studio</span></a>
-              <ul class="navigation-list-list">
-                <li class="nav-link">
-                  <a class="navigation-list-link link" href="./index.html">Agencja</a>
-                </li>
-                <li class="nav-link">
-                  <a class="navigation-list-link link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-link">
-                  <a class="navigation-list-link link" href="/Kontakt">Kontakt</a>
-                </li>
-              </ul>
-            </nav>
-            <ul class="navigation-list-list">
-              <li class="nav-link">
+          <nav class=".rodzic">
+            <a class="logo link" href="index.html">Web<span class="logo-color">Studio</span></a>
+            <ul class="menu">
+              <li class="navigation-list">
+                <a class="navigation-list-link link" href="./index.html">Agencja</a>
+              </li>
+              <li class="navigation-list">
+                <a class="navigation-list-link link" href="./portfolio.html">Portfolio</a>
+              </li>
+              <li class="navigation-list">
+                <a class="navigation-list-link link" href="/Kontakt">Kontakt</a>
+              </li>
+            </ul>
+            <ul class="contact">
+              <li class="navigation-list">
                 <a class="navigation-list-mail link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="nav-link">
+              <li class="navigation-list">
                 <a class="navigation-list-tel link" href="tel:+48111111111">+48 111 111 111</a>
               </li>
             </ul>
-          </div>
+          </nav>
         </div>
       </section>
     </header>
 
     <!--  Efektywne Rozwiązania hero  -->
     <main>
-      <section class="section">
-        <section class="slogan">
-          <h1 class="hero-item-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-          <button class="slogan-button" type="button">Zamów usługę</button>
+      <section class="slogan">
+        <section class="section">
+          <div class="container">
+            <h1 class="hero-item-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+            <button class="slogan-button" type="button">Zamów usługę</button>
+          </div>
         </section>
       </section>
 
