--- a/portfolio.html
+++ b/portfolio.html
@@ -23,34 +23,32 @@
 
   <body>
     <header class="header">
-      <section class="section">
-        <div class="container">
-          <nav class=".rodzic">
-            <a class="logo link" href="index.html">Web<span class="logo-color">Studio</span></a>
-            <ul class="menu">
-              <li class="navigation-list">
-                <a class="navigation-list-link link" href="./index.html">Agencja</a>
-              </li>
-              <li class="navigation-list">
-                <a class="navigation-list-link link" href="./portfolio.html">Portfolio</a>
-              </li>
-              <li class="navigation-list">
-                <a class="navigation-list-link link" href="/Kontakt">Kontakt</a>
-              </li>
-            </ul>
-            <ul class="contact">
-              <li class="navigation-list">
-                <a class="navigation-list-mail link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="navigation-list">
-                <a class="navigation-list-tel link" href="tel:+48111111111">+48 111 111 111</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </section>
+      <div class="container dodatkowa-klasa">
+        <a class="logo link" href="index.html">Web<span class="logo-color">Studio</span></a>
+        <nav class=".rodzic">
+          <ul class="menu">
+            <li class="navigation-list">
+              <a class="navigation-list-link link" href="./index.html">Agencja</a>
+            </li>
+            <li class="navigation-list">
+              <a class="navigation-list-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="navigation-list">
+              <a class="navigation-list-link link" href="/Kontakt">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact">
+          <li class="navigation-list">
+            <a class="navigation-list-mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="navigation-list">
+            <a class="navigation-list-tel link" href="tel:+48111111111">+48 111 111 111</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
       <section class="section">
