--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="container dodatkowa-klasa">
         <a class="logo link" href="index.html">Web<span class="logo-color">Studio</span></a>
-        <nav class=".rodzic">
+        <nav class="rodzic">
           <ul class="menu">
             <li class="navigation-list">
               <a class="navigation-list-link link" href="./index.html">Agencja</a>
